# xrock_gui_model

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
configuration/cnd_gui/: XRockGUI.yml  node_config.yml
configuration/cnd_gui/cnd_db/: info.yml
configuration/cnd_gui/cnd_db/Deployment/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/execution::CNDHandler/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/execution::ProcessServer/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/logger::Logger/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::Altimeter/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::AuvController/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::AuvMotion/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::Camera/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::CameraPlugin/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::ContactForceSensor/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::DepthCamera/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::EntityFakeDetection/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::ForceApplier/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::ForceTorque6DOF/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::ForceTorqueApplier/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::HighResRangeFinder/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::IMU/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::Joints/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::LaserRangeFinder/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::ObjectHighlighter/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::Plugin/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::RobotTeleportation/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::RotatingLaserRangeFinder/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::Sonar/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::Task/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/mars::Trigger/v0.0.1/: model.yml
configuration/cnd_gui/cnd_db/transformer::Task/v0.0.1/: model.yml
configuration/shader_gui/: XRockGUI.yml  config_default.yml  preferences.yml
configuration/shader_gui/shader_db/: info.yml
configuration/shader_gui/shader_db/backfaceNormal/v1/: model.yml
configuration/shader_gui/shader_db/compose_vec2/v1/: model.yml
configuration/shader_gui/shader_db/compose_vec3/v1/: model.yml
configuration/shader_gui/shader_db/compose_vec4/v1/: model.yml
configuration/shader_gui/shader_db/cosUniform/v1/: model.yml
configuration/shader_gui/shader_db/crop_skalar/v1/: model.yml
configuration/shader_gui/shader_db/crop_vec2/v1/: model.yml
configuration/shader_gui/shader_db/decompose_vec2/v1/: model.yml
configuration/shader_gui/shader_db/decompose_vec3/v1/: model.yml
configuration/shader_gui/shader_db/decompose_vec4/v1/: model.yml
configuration/shader_gui/shader_db/default_diffuseMap_fragment_shader/ /: model.yml
configuration/shader_gui/shader_db/default_fragment_shader/ /: model.yml
configuration/shader_gui/shader_db/default_vertex_shader/v0.1/: model.yml
configuration/shader_gui/shader_db/dot_max/v1/: model.yml
configuration/shader_gui/shader_db/envmap_color_frag/v1/: model.yml
configuration/shader_gui/shader_db/envmap_vert/v1/: model.yml
configuration/shader_gui/shader_db/float/v1/: model.yml
configuration/shader_gui/shader_db/fragInfo/v1/: model.yml
configuration/shader_gui/shader_db/fragOut/v1/: model.yml
configuration/shader_gui/shader_db/heightmap_fragment_shader/ /: model.yml
configuration/shader_gui/shader_db/instanceIDARB/v1/: model.yml
configuration/shader_gui/shader_db/int/v1/: model.yml
configuration/shader_gui/shader_db/int_to_float/v1/: model.yml
configuration/shader_gui/shader_db/length_vec3/v1/: model.yml
configuration/shader_gui/shader_db/math_float/v1/: model.yml
configuration/shader_gui/shader_db/math_floor_div/v1/: model.yml
configuration/shader_gui/shader_db/math_mod/v1/: model.yml
configuration/shader_gui/shader_db/math_mult/v1/: model.yml
configuration/shader_gui/shader_db/math_rotate3d/v1/: model.yml
configuration/shader_gui/shader_db/math_sin/v1/: model.yml
configuration/shader_gui/shader_db/math_vec2/v1/: model.yml
configuration/shader_gui/shader_db/math_vec3/v1/: model.yml
configuration/shader_gui/shader_db/math_vec4/v1/: model.yml
configuration/shader_gui/shader_db/mix_vec4/v1/: model.yml
configuration/shader_gui/shader_db/mix_vec4_weighted/v1/: model.yml
configuration/shader_gui/shader_db/mult_vec3_mat4/v1/: model.yml
configuration/shader_gui/shader_db/mult_vec4/v1/: model.yml
configuration/shader_gui/shader_db/mult_vec4_mat4/v1/: model.yml
configuration/shader_gui/shader_db/noise_frag/v1/: model.yml
configuration/xbagel_gui/: configWindows.yml  config_default.yml  libs.txt  node_config.yml
configuration/xrock_gui/: MultiDBConfig.yml  configWindows.yml  config_default.yml  libs.txt
doc/doxygen/: DoxygenLayout.xml  bagel_doxyconf  bagel_doxyconf_no_graphs
doc/user_manual/: xrock_gui.rst
resources/: resources.qrc
src/: BasicModelHelper.cpp  BasicModelHelper.hpp  BuildModuleDialog.cpp  BuildModuleDialog.hpp  BundleSelectionDialog.cpp  BundleSelectionDialog.hpp  ComponentModelEditorWidget.cpp  ComponentModelEditorWidget.hpp  ComponentModelInterface.cpp  ComponentModelInterface.hpp  ConfigMapHelper.cpp  ConfigMapHelper.hpp  ConfigureDialog.cpp  ConfigureDialog.hpp  ConfigureDialogLoader.hpp  DBInterface.hpp  FileDB.cpp  FileDB.hpp  ImportDialog.cpp  ImportDialog.hpp  LinkHardwareSoftwareDialog.cpp  LinkHardwareSoftwareDialog.hpp  Model.cpp  Model.hpp  ModelLib.cpp  ModelLib.hpp  ModelWidget.cpp  ModelWidget.hpp  MultiDB.cpp  MultiDB.hpp  MultiDBConfigDialog.cpp  MultiDBConfigDialog.hpp  RestDB.cpp  RestDB.hpp  ServerlessDB.cpp  ServerlessDB.hpp  ToolbarBackend.cpp  ToolbarBackend.hpp  VersionDialog.cpp  VersionDialog.hpp  (+3 more)
src/plugins/: MARSIMUConfig.cpp  MARSIMUConfig.hpp  ROCKTASKConfig.cpp  ROCKTASKConfig.hpp
src/utils/: WaitCursorRAII.hpp
test/: test_restdb.cpp
(+45 files in other folders)
